Enable code splitting

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "license": "MPL-2.0",
   "author": "dora <31735614+dora1998@users.noreply.github.com>",
   "scripts": {
-    "build": "PRODUCTION=true webpack",
-    "build:prod:analyze": "PRODUCTION=true ANALYZE=true webpack",
+    "build": "cross-env PRODUCTION=true webpack",
+    "build:prod:analyze": "cross-env PRODUCTION=true ANALYZE=true webpack",
     "build:dev": "webpack",
     "build:watch": "yarn build --watch --progress",
-    "build:analyze": "ANALYZE=true webpack",
+    "build:analyze": "cross-env ANALYZE=true webpack",
     "serve": "node --enable-source-maps dist/server.js",
     "serve:dev": "wait-on dist/server.js && NODE_OPTIONS=--enable-source-maps nodemon dist/server.js",
     "serve:test": "cross-env TEST=enable node --enable-source-maps dist/server.js",
