--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,6 +1,6 @@
 name: lighthouse
 
-on: [pull_request]
+on: [push]
 
 jobs:
   test:
@@ -27,10 +27,9 @@ jobs:
         run: |
           echo "total_score=$(node ./report/score.js)" >> $GITHUB_ENV
 
-      - name: Comment on PR
-        uses: peter-evans/create-or-update-comment@v1
+      - name: Comment on Commit
+        uses: peter-evans/commit-comment@v2
         with:
-          issue-number: ${{ github.event.pull_request.number }}
           body: |
             <h2>Total Lighthouse Bench Score</h2>
             <pre>${{ env.total_score }}</pre>
