--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "cross-env PRODUCTION=true webpack",
     "build:prod:analyze": "cross-env PRODUCTION=true ANALYZE=true webpack",
     "build:dev": "webpack",
-    "build:watch": "yarn build --watch --progress",
+    "build:watch": "yarn build:dev --watch --progress",
     "build:analyze": "cross-env ANALYZE=true webpack",
     "serve": "node --enable-source-maps dist/server.js",
     "serve:dev": "wait-on dist/server.js && NODE_OPTIONS=--enable-source-maps nodemon dist/server.js",
