--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -110,6 +110,8 @@ jobs:
 
   calculate:
     runs-on: ubuntu-latest
+    needs:
+      [test-home, test-race-card, test-race-odds1, test-race-odds2, test-result]
     steps:
       - uses: actions/checkout@v2
       - name: Setup Node
