--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -17,7 +17,7 @@ jobs:
         run: yarn build
       - name: Run Server
         run: |
-          npx concurrently -k -s first -n "SERVER,LIGHTHOUSE" -c "blue,red" "yarn serve:test" "npx wait-on tcp:3000 && npx lighthouse --chrome-flags='--headless' --output json --output-path ./report/top.json http://localhost:3000"
+          npx concurrently -k -s first -n "SERVER,LIGHTHOUSE" -c "blue,red" "yarn serve:test" "npx wait-on tcp:3000 -t 20000 && npx lighthouse --chrome-flags='--headless' --output json --output-path ./report/top.json http://localhost:3000"
       - name: Save Result
         uses: actions/upload-artifact@v3
         with:
@@ -38,7 +38,7 @@ jobs:
         run: yarn build
       - name: Run Server
         run: |
-          npx concurrently -k -s first -n "SERVER,LIGHTHOUSE" -c "blue,red" "yarn serve:test" "npx wait-on tcp:3000 && npx lighthouse --chrome-flags='--headless' --output json --output-path ./report/race-card.json http://localhost:3000/races/59b583d7-d696-4365-ae5d-2e9d13deef1f/race-card"
+          npx concurrently -k -s first -n "SERVER,LIGHTHOUSE" -c "blue,red" "yarn serve:test" "npx wait-on tcp:3000 -t 20000 && npx lighthouse --chrome-flags='--headless' --output json --output-path ./report/race-card.json http://localhost:3000/races/59b583d7-d696-4365-ae5d-2e9d13deef1f/race-card"
       - name: Save Result
         uses: actions/upload-artifact@v3
         with:
@@ -59,7 +59,7 @@ jobs:
         run: yarn build
       - name: Run Server
         run: |
-          npx concurrently -k -s first -n "SERVER,LIGHTHOUSE" -c "blue,red" "yarn serve:test" "npx wait-on tcp:3000 && npx lighthouse --chrome-flags='--headless' --output json --output-path ./report/odds1.json http://localhost:3000/races/59b583d7-d696-4365-ae5d-2e9d13deef1f/odds"
+          npx concurrently -k -s first -n "SERVER,LIGHTHOUSE" -c "blue,red" "yarn serve:test" "npx wait-on tcp:3000 -t 20000 && npx lighthouse --chrome-flags='--headless' --output json --output-path ./report/odds1.json http://localhost:3000/races/59b583d7-d696-4365-ae5d-2e9d13deef1f/odds"
       - name: Save Result
         uses: actions/upload-artifact@v3
         with:
@@ -80,7 +80,7 @@ jobs:
         run: yarn build
       - name: Run Server
         run: |
-          npx concurrently -k -s first -n "SERVER,LIGHTHOUSE" -c "blue,red" "yarn serve:test" "npx wait-on tcp:3000 && npx lighthouse --chrome-flags='--headless' --output json --output-path ./report/odds2.json http://localhost:3000/races/1f5a7da6-b312-4641-8eac-7b34256a9bb5/odds"
+          npx concurrently -k -s first -n "SERVER,LIGHTHOUSE" -c "blue,red" "yarn serve:test" "npx wait-on tcp:3000 -t 20000 && npx lighthouse --chrome-flags='--headless' --output json --output-path ./report/odds2.json http://localhost:3000/races/1f5a7da6-b312-4641-8eac-7b34256a9bb5/odds"
       - name: Save Result
         uses: actions/upload-artifact@v3
         with:
@@ -101,7 +101,7 @@ jobs:
         run: yarn build
       - name: Run Server
         run: |
-          npx concurrently -k -s first -n "SERVER,LIGHTHOUSE" -c "blue,red" "yarn serve:test" "npx wait-on tcp:3000 && npx lighthouse --chrome-flags='--headless' --output json --output-path ./report/result.json http://localhost:3000/races/1f5a7da6-b312-4641-8eac-7b34256a9bb5/result"
+          npx concurrently -k -s first -n "SERVER,LIGHTHOUSE" -c "blue,red" "yarn serve:test" "npx wait-on tcp:3000 -t 20000 && npx lighthouse --chrome-flags='--headless' --output json --output-path ./report/result.json http://localhost:3000/races/1f5a7da6-b312-4641-8eac-7b34256a9bb5/result"
       - name: Save Result
         uses: actions/upload-artifact@v3
         with:
